ch15/pi/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-web
  labels:
    kiamol: ch15
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: pi-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-web
  labels:
    kiamol: ch15
spec:
  selector:
    matchLabels:
      app: pi-web
  template:
    metadata:
      labels:
        app: pi-web
    spec:
      containers:
        - image: kiamol/ch05-pi
          command: ["dotnet", "Pi.Web.dll", "-m", "web"]
          name: web
          ports:
            - containerPort: 80
              name: http
