ch15/pi/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: pi
  labels:
    kiamol: ch15
spec:
  rules:
  - host: pi.kiamol.local
    http:
      paths:
      - path: /
        backend:
          serviceName: pi-web
          servicePort: 80
